# tg-archive

./: .gitignore  pyproject.toml
tgarchive/: db.py  sync.py
