[project]
name = "tg-archive"
version = "1.1.2"
description = "A tool for exporting Telegram group chats into static websites, preserving the chat history like mailing list archives."
authors = [{ name = "Kailash Nadh", email = "kailash@nadh.in" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Documentation",
]
dependencies = [
    "Telethon>=1.30.0,<2",
    "Jinja2>=3.1.2,<4",
    "PyYAML>=6.0.1,<7",
    "cryptg==0.4.0",
    "pytz~=2023.3",
    "pillow>=9.5.0,<10",
    "feedgen>=0.9.0,<0.10",
    "python-magic>=0.4.27,<0.5",
]

[project.urls]
Homepage = "https://github.com/knadh/tg-archive"
Repository = "https://github.com/knadh/tg-archive"

[project.scripts]
tg-archive = "tgarchive:main"

[tool.hatch.build.targets.sdist]
include = ["tgarchive"]

[tool.hatch.build.targets.wheel]
include = ["tgarchive"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
